  * Fixed VCS URL (https)

  [ Laurent Bigonville ]
  * New upstream release (Closes: #653588, #878080)
    - Bump libcairo2-dev build-dependency (Closes: #605958)
    - Drop debian/patches/setup_25_compat, we don't need compatibility with
      python 2.5 anymore
  * debian/watch: Update watch file, the project has been moved to github
  * Bump Standards-Version to 4.1.1 (no further changes)

 -- Laurent Bigonville <bigon@debian.org>  Sun, 19 Nov 2017 11:48:53 +0100

pycairo (1.8.8-2.2) unstable; urgency=medium

  * Non-maintainer upload.
  * Add python-cairo-dbg.maintscript to cleanup symlink left over from version
    1.4.12-1.2 (lenny). (Closes: #861305)

 -- Ivo De Decker <ivodd@debian.org>  Sun, 07 May 2017 13:10:03 +0200

pycairo (1.8.8-2.1) unstable; urgency=medium

  * Non-maintainer upload.
  * Replace deprecated cdbs_python_build_versions with cdbs_python_flavors.
    (Closes: #830364)

 -- Johannes Brandstätter <jbrandst@2ds.eu>  Sun, 25 Sep 2016 11:50:17 +0200

pycairo (1.8.8-2) unstable; urgency=medium

  [ Jakub Wilk ]
  * Add Vcs-* fields.

  [ Andrey Rahmatullin ]
  * Port from python-support to dh-python (Closes: #786160).
  * Drop obsolete debian/pyversions.
  * Drop unnecessary XB-Python-Version.

 -- Debian Python Modules Team <python-modules-team@lists.alioth.debian.org>  Sun, 06 Sep 2015 13:47:26 +0500

pycairo (1.8.8-1) unstable; urgency=low

  [ Loïc Minier ]
  * Use *-packages instead of site-packages in debian/python-cairo-dbg.install
    to work with both dist-packages and site-packages, backports etc.

  [ Torsten Marek ]
  * New upstream release
  * Convert to new source format "3.0 (quilt)"
  * debian/control
    - Updated standards version to 3.8.3, no changes necessary
  * debian/patches/setup_25_compat
    - Ensure Python 2.5 compatibility
    - Make sure __init__.py is installed
  * debian/rules
    - Remove old dpatch workarounds

 -- Torsten Marek <shlomme@debian.org>  Sun, 24 Jan 2010 15:39:31 +0100
