@@ -1,1 +1,1 @@
-build/html/
+debian/tmp-doc/html
