@@ -1,29 +1,13 @@
 #!/usr/bin/make -f
 DEB_COMPRESS_EXCLUDE= .js .inv
 
-include /usr/share/cdbs/1/rules/debhelper.mk
-include /usr/share/cdbs/1/class/python-distutils.mk
+%:
+	dh $@ --buildsystem=pybuild --with python2
 
-DEB_PYTHON_INSTALL_ARGS_ALL += --install-layout=deb
+override_dh_auto_build:
+	dh_auto_build --buildsystem=pybuild
+	sphinx-build -bhtml docs debian/tmp-doc/html
 
-install/python-cairo-dev::
-	python setup.py install_data --install-dir=$(CURDIR)/debian/tmp/usr
-	sphinx-build -bhtml doc build/html
-
-build/python-cairo-dbg::
-	set -e; \
-	for i in $(cdbs_python_flavors); do \
-	  $$i-dbg ./setup.py build; \
-	done
-
-install/python-cairo-dbg::
-	for i in $(cdbs_python_flavors); do \
-	  $$i-dbg ./setup.py install --install-layout=deb --root $(CURDIR)/debian/tmp; \
-	done
-
-clean::
-	-for i in $(cdbs_python_flavors); do \
-	  $$i-dbg ./setup.py clean -a; \
-	done
-	rm -f $(CURDIR)/pycairo.pc $(CURDIR)/src/config.h
-	rm -rf $(CURDIR)/build
+override_dh_auto_clean:
+	dh_auto_clean --buildsystem=pybuild
+	rm -rf debian/tmp-doc
